--- a/styles/website.css
+++ b/styles/website.css
@@ -16,3 +16,22 @@ figcaption {
     font-size: 80%;
     color: #666;
 }
+#book-search-input {
+    border-bottom: 3px solid #4597cb;
+}
+.book-summary ul.summary li.active&gt;
+a {
+    color: #4597cb;
+}
+.book-summary ul.summary li a.gitbook-link {
+    font-size: 8px;
+}
+.markdown-section h1 {
+    color: #58595b;
+}
+.markdown-section h2,
+h3,
+h4,
+h5 {
+    color: #4597cb;
+}
